--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/tinker": "^2.0",
         "laravolt/indonesia": "^0.27.0",
         "livewire/livewire": "^2.2",
+        "maatwebsite/excel": "^3.1",
         "richan-fongdasen/eloquent-blameable": "^1.6",
         "spatie/laravel-permission": "^3.17",
         "yajra/laravel-datatables-oracle": "~9.0"
